--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^17.3.12",
     "@angular/router": "^17.3.12",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "chart.js": "^4.4.4",
     "jspdf": "^2.5.2",
     "rxjs": "~7.8.1",
     "tslib": "^2.7.0",
