--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "jspdf": "^2.5.2",
     "rxjs": "~7.8.1",
     "tslib": "^2.7.0",
+    "uswagon-auth": "file:uswagon-core-lib/uswagon-auth",
+    "uswagon-core": "file:uswagon-core-lib/uswagon-core",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
