--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
+  "scarfSettings": {
+    "enabled": false
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.12",
@@ -23,6 +26,8 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "chart.js": "^4.4.4",
     "jspdf": "^2.5.2",
+    "lottie-web": "^5.12.2",
+    "ngx-lottie": "^11.0.2",
     "rxjs": "~7.8.1",
     "tslib": "^2.7.0",
     "uswagon-auth": "file:uswagon-core-lib/uswagon-auth",
