--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^17.3.12",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "chart.js": "^4.4.4",
+    "gsap": "^3.12.5",
     "jspdf": "^2.5.2",
     "lottie-web": "^5.12.2",
     "ngx-lottie": "^11.0.2",
