--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chart.js": "^4.4.4",
     "gsap": "^3.12.5",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lottie-web": "^5.12.2",
     "ngx-lottie": "^11.0.2",
     "rxjs": "~7.8.1",
