--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,3 @@
-src/environment/config.ts merge=ours
-src/environment/environment.ts merge=ours
+src/environment/* merge=ours
 src/variables.scss merge=ours
 src/assets/specifics/* merge=ours
