--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "postinstall": "git clone https://github.com/ryukkn/uswagon-core-lib.git ./uswagon-core-lib",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "postinstall": "git clone https://$GITHUB_PAT@github.com/ryukkn/uswagon-core-lib.git ./uswagon-core-lib"
+    "test": "ng test"
+    
   },
   "scarfSettings": {
     "enabled": false
